Added checking for 明暗崗